--- a/assets/uikit.css
+++ b/assets/uikit.css
@@ -1988,15 +1988,15 @@ select.uk-form-width-xsmall {
  * Secondary
  */
 .uk-button-secondary {
-  background-color: transparent;
+  background-color: #ededed;
   color: #171717;
-  border: 1px solid transparent;
+  border-radius: 5px;
+
 }
 /* Hover */
 .uk-button-secondary:hover {
-  background-color: #edededed;
+  background-color: #dad6d6;
   color: #181818;
-  border-radius: 10px;
 
 }
 /* OnClick + Active */
